# miniShopAxum

./: Cargo.toml
migrations/: 20260106040430_init_users_table.sql  20260106095431_add_updated_at_to_users_table.sql  20260107090507_create_categories_and_products_tables.sql  20260107100258_description_to_category_table.sql  20260109034404_create_cart_system.sql
src/: main.rs  routes.rs
src/config/: mod.rs
src/constants/: mod.rs
src/controllers/: auth_controller.rs  cart_controller.rs  categories_controller.rs  mod.rs  products_controller.rs  user_controller.rs
src/middleware/: auth.rs
src/models/: dto.rs  entity.rs  error.rs  mod.rs  response.rs
src/repositories/: cart_repository.rs  categories_repository.rs  mod.rs  products_repository.rs  user_repository.rs
src/services/: auth_service.rs  cart_service.rs  categories_service.rs  mod.rs  products_service.rs  search_service.rs  user_service.rs
src/utils/: jwt.rs
